# django-poetry-docker

./: .env.dev-sample  .env.prod-sample  .env.prod.db-sample  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
app/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile_alpine_no_poetry.prod  Dockerfile_buster  Dockerfile_buster.prod  Makefile  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
app/core/: settings.py
app/hello_world/: settings.py  urls.py
app/upload/: views.py
app/upload/templates/: upload.html
nginx/: Dockerfile  nginx.conf
