[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["alekorn <entkorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.3"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
